@@ -4,13 +4,15 @@
 ; License GNU General Public License version 2 or later; see LICENSE.txt, see LICENSE.php
 ; Note : All ini files need to be saved as UTF-8
 
-HANDLES USER AUTHENTICATION WITH A GMAIL ACCOUNT="Handles User Authentication with a GMail account (Requires cURL)"
-USERNAME SUFFIX="Username Suffix"
-PARAMUSERNAMESUFFIX="A suffix to use for the username, typically gmail.com is the suffix but you may wish to use a Google Apps for Your Domain suffix. This doesn't include the @ symbol, if left blank username suffix will be ignored."
-VERIFY PEER="Verify Peer"
-PARAMVERIFYPEER="Verify the peer connection using a CA certificate. In some situations authentication will fail due to certificate issues, disabling this should resolve the situation in that case."
-APPLY SUFFIX="Apply Username Suffix"
-PARAMAPPLYSUFFIX="Options for applying the suffix: Don't apply the suffix, only apply the suffix if missing (any user supplied suffix will be used) or always apply the suffix replacing any user supplied suffix"
-DONT APPLY SUFFIX="Don't Apply Suffix"
-APPLY SUFFIX IF MISSING="Apply suffix if missing"
-ALWAYS USE SUFFIX="Always use suffix"
+PLG_GMAIL_XML_DESCRIPTION="Handles User Authentication with a GMail account (Requires cURL)"
+PLG_GMAIL_FIELD_SUFFIX_LABEL="Username Suffix"
+PLG_GMAIL_FIELD_SUFFIX_DESC="A suffix to use for the username, typically gmail.com is the suffix but you may wish to use a Google Apps for Your Domain suffix. This doesn't include the @ symbol, if left blank username suffix will be ignored."
+PLG_GMAIL_FIELD_APPLYSUFFIX_LABEL="Apply Username Suffix"
+PLG_GMAIL_FIELD_APPLYSUFFIX_DESC="Options for applying the suffix: Don't apply the suffix, only apply the suffix if missing (any user supplied suffix will be used) or always apply the suffix replacing any user supplied suffix"
+PLG_GMAIL_FIELD_USER_BLACKLIST_LABEL="User blacklist"
+PLG_GMAIL_FIELD_USER_BLACKLIST_DESC="A list of usernames not permitted to log in via the GMail plugin. The user names should be separated by a comma."
+PLG_GMAIL_FIELD_VERIFYPEER_LABEL="Verify Peer"
+PLG_GMAIL_FIELD_VERIFYPEER_DESC="Verify the peer connection using a CA certificate. In some situations authentication will fail due to certificate issues, disabling this should resolve the situation in that case."
+PLG_GMAIL_FIELD_VALUE_NOAPPLYSUFFIX="Don't Apply Suffix"
+PLG_GMAIL_FIELD_VALUE_APPLYSUFFIXMISSING="Apply suffix if missing"
+PLG_GMAIL_FIELD_VALUE_APPLYSUFFIXALWAYS="Always use suffix"
