@@ -4,7 +4,4 @@
 ; License GNU General Public License version 2 or later; see LICENSE.txt, see LICENSE.php
 ; Note : All ini files need to be saved as UTF-8
 
-HANDLES JOOMLAS DEFAULT USER AUTHENTICATION="Handles Joomla's default User authentication"
-JOOMLA CAN NOT HAVE A BLANK PASSWORD="Joomla can not have blank password"
-INVALID PASSWORD="Invalid password"
-INVALID RESPONSE FROM DATABASE="There is an invalid response from the database."
+PLG_AUTH_JOOMLA_XML_DESCRIPTION="Handles Joomla's default User authentication"
