@@ -4,15 +4,17 @@
 ; License GNU General Public License version 2 or later; see LICENSE.txt, see LICENSE.php
 ; Note : All ini files need to be saved as UTF-8
 
-HANDLES USER AUTHENTICATION WITH AN OPENID REQUIRES PHP5="Handles user authentication with an OpenID (Requires PHP5)"
+PLG_OPENID_XML_DESCRIPTION="Handles user authentication with an OpenID"
+PLG_LDAP_FIELD_USERMODE_LABEL="Convert Old Usernames"
+PLG_LDAP_FIELD_USERMODE_DESC="If you are upgrading a site that was already using OpenId, you should set this to yes."
+PLG_LDAP_FIELD_PHISHING_RESISTANT_LABEL="Require Policy phishing-resistant"
+PLG_LDAP_FIELD_PHISHING_RESISTANT_DESC="Require that OPs must be configured for http://schemas.openid.net/pape/policies/2007/06/phishing-resistant"
+PLG_LDAP_FIELD_MULTIFACTOR_LABEL="Require Policy multi-factor"
+PLG_LDAP_FIELD_MULTIFACTOR_DESC="Require that OPs must be configured for http://schemas.openid.net/pape/policies/2007/06/multi-factor"
+PLG_LDAP_FIELD_MULTIFACTOR_PHYSICAL_LABEL="Require Policy multi-factor-physical"
+PLG_LDAP_FIELD_MULTIFACTOR_PHYSICAL_DESC="Require that OPs must be configured for http://schemas.openid.net/pape/policies/2007/06/multi-factor-physical"
+
+; mod_login strings not implemented yet as of now. If implemented please change keys to fit standards
 LOGIN_WITH_OPENID="Login with an OpenID"
 NORMAL_LOGIN="Go back to normal login"
 WHAT_IS_OPENID="What is OpenId?"
-CONVERT OLD USERNAMES="Convert Old Usernames"
-OPENID_USERMODE_DESC="If you are upgrading a site that was already using OpenId, you should set this to yes. Otherwise, set this to no. See the 1.5.9 release notes for more information."
-REQUIRE POLICY PHISHING RESISTANT="Require Policy phishing-resistant"
-PHISHING_RESISTANT_DESC="Require that OPs must be configured for http://schemas.openid.net/pape/policies/2007/06/phishing-resistant"
-REQUIRE POLICY MULTI FACTOR="Require Policy multi-factor"
-MULTI_FACTOR_DESC="Require that OPs must be configured for http://schemas.openid.net/pape/policies/2007/06/multi-factor"
-REQUIRE POLICY MULTI FACTOR PHYSICAL="Require Policy multi-factor-physical"
-MULTI_FACTOR_PHYSICAL_DESC="Require that OPs must be configured for http://schemas.openid.net/pape/policies/2007/06/multi-factor-physical"
