@@ -11,7 +11,7 @@
 	<authorEmail>admin@joomla.org</authorEmail>
 	<authorUrl>www.joomla.org</authorUrl>
 	<version>1.6</version>
-	<description>Handles user authentication with a GMail account</description>
+	<description>PLG_GMAIL_XML_DESCRIPTION</description>
 	<files>
 		<filename
 			plugin="gmail">gmail.php</filename>
@@ -21,14 +21,14 @@
 			name="applysuffix"
 			type="list"
 			default="0"
-			label="Apply Suffix"
-			description="fieldAPPLYSUFFIX">
+			label="PLG_GMAIL_FIELD_APPLYSUFFIX_LABEL"
+			description="PLG_GMAIL_FIELD_APPLYSUFFIX_DESC">
 			<option
-				value="0">Dont apply suffix</option>
+				value="0">PLG_GMAIL_FIELD_VALUE_NOAPPLYSUFFIX</option>
 			<option
-				value="1">Apply suffix if missing</option>
+				value="1">PLG_GMAIL_FIELD_VALUE_APPLYSUFFIXMISSING</option>
 			<option
-				value="2">Always use suffix</option>
+				value="2">PLG_GMAIL_FIELD_VALUE_APPLYSUFFIXALWAYS</option>
 		</field>
 
 		<field
@@ -36,15 +36,15 @@
 			type="text"
 			size="20"
 			default=""
-			label="Username Suffix"
-			description="fieldUSERNAMESUFFIX" />
+			label="PLG_GMAIL_FIELD_SUFFIX_LABEL"
+			description="PLG_GMAIL_FIELD_SUFFIX_DESC" />
 
 		<field
 			name="verifypeer"
 			type="radio"
 			default="1"
-			label="Verify Peer"
-			description="fieldVERIFYPEER">
+			label="PLG_GMAIL_FIELD_VERIFYPEER_LABEL"
+			description="PLG_GMAIL_FIELD_VERIFYPEER_DESC">
 			<option
 				value="0">JNo</option>
 			<option
@@ -56,7 +56,7 @@
 			type="text"
 			size="20"
 			default=""
-			label="User blacklist"
-			description="fieldUSERBLACKLIST" />
+			label="PLG_GMAIL_FIELD_USER_BLACKLIST_LABEL"
+			description="PLG_GMAIL_FIELD_USER_BLACKLIST_DESC" />
 	</fields>
 </extension>
